With Create Event Fragment ad Choose Company Activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">QEL Организатор</string>
     <string name="open_toggle">Открыть</string>
     <string name="close_toggle">Закрыть</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="spinnerPromt">Место</string>
 </resources>
