--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,22 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="spinnerPromt">Место</string>
+    <string name="typeOfEventCalendar">Вид мероприятия</string>
+    <string name="placeOfEvent">Место</string>
+    <string name="ticketsOfEvent">Билеты</string>
+    <string-array name="location_spinner_arr">
+        <item>Место</item>
+        <item>Онлайн-мероприятие</item>
+    </string-array>
+    <string-array name="typeOfEventCalendarArr">
+        <item>Повторяющееся мероприятие</item>
+    </string-array>
+    <string-array name="placeOfEventArr">
+        <item>Меню 1</item>
+        <item>Меню 2</item>
+    </string-array>
+    <string-array name="ticketsOfEventArr">
+        <item>Интерактивная схема зала</item>
+    </string-array>
+
 </resources>
