--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="spinnerPromt">Место</string>
+    <string name="occursEveryMonthDay">Выберите день</string>
 </resources>
